--- a/server/context.yaml
+++ b/server/context.yaml
@@ -2,6 +2,7 @@ context:
   components:
   - appInfo:          com.developmentontheedge.be5.components.ApplicationInfoComponent
   - document:         com.developmentontheedge.be5.components.Document
+  - form:             com.developmentontheedge.be5.components.Form
   - languageSelector: com.developmentontheedge.be5.components.LanguageSelector
   - menu:             com.developmentontheedge.be5.components.Menu
   - roleSelector:     com.developmentontheedge.be5.components.RoleSelector
