--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: java
 before_install:
-  - git clone https://github.com/DevelopmentOnTheEdge/xmltest.git
-    && cd xmltest
-    && mvn install
-    && cd ../
   - git clone https://github.com/DevelopmentOnTheEdge/beanexplorer.git
     && cd beanexplorer
-    && mvn install
+    && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
     && cd ../
 install:
   - mvn test-compile -DskipTests=true -Dmaven.javadoc.skip=true -B -V
