refactoring and fix operation parameters check

--- a/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
+++ b/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
@@ -45,6 +45,9 @@ testtableAdmin:
   - TestOperation:
       roles: Administrator
       code: com.developmentontheedge.be5.operations.TestOperation
+  - TestOperationProperty:
+      roles: Administrator
+      code: com.developmentontheedge.be5.operations.TestOperationProperty
   - TestGroovyOp:
       type: Groovy
       roles: Administrator
