--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -17,16 +17,25 @@ testtable:
   - All records:
       type: 1D_unknown
       roles: '@AllRoles'
-      code: |2-
+      code: |-
             SELECT
               t.name AS "Name",
               t.value AS "Value"
             FROM
               testtable t
+  - LinkQuick:
+      type: 1D_unknown
+      roles: SystemDeveloper
+      code: |-
+         SELECT
+            t.name AS "Name",
+            '<quick visible="true"/>;<link using="___ID" columns="ID" table="testtable" queryName="Test 1D unknown"/>' AS ";Name"
+          FROM
+            testtable t
   - Sub Query:
       type: 1D_unknown
       roles: SystemDeveloper
-      code: |2-
+      code: |-
             SELECT
               t.name AS "___Name",
               t.name AS "Name",
