--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
     && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
     && cd ../
 install:
-  - mvn test-compile -Dmaven.javadoc.skip=true -B -V
+  - mvn compile -Dmaven.javadoc.skip=true -B -V
 after_success:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test org.jacoco:jacoco-maven-plugin:report org.eluder.coveralls:coveralls-maven-plugin:report
 jdk:
