test 'type: DATE'

--- a/server/src/test/resources/project.yaml
+++ b/server/src/test/resources/project.yaml
@@ -4,6 +4,7 @@ testProject:
   projectFileStructure: {}
   modules: []
   application:
+  - dateTime
   - testtable
   - testtableAdmin
   - testtUser
