--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -10,7 +10,7 @@ _system_:
       file: Entities.groovy
   - Queries:
       type: Groovy
-      invisible: false
+      invisible: true
       roles: Administrator
       file: Queries.groovy
   - Session variables:
