--- a/sql/pom.xml
+++ b/sql/pom.xml
@@ -2,11 +2,11 @@
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
 
- <artifactId>sql</artifactId>
+ <artifactId>be5-sql</artifactId>
  <version>0.0.27</version>
  <packaging>jar</packaging>
 
- <name>SQL parser generator</name>
+ <name>be5 sql</name>
  <description>Parse SQL (select statement only) and builds its AST. 
  Then DBMS specific SQL select statement can be generated.</description>
 
