--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -36,19 +36,19 @@
 
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
-			<artifactId>dbms</artifactId>
+			<artifactId>be5-dbms</artifactId>
 			<version>0.1.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
-			<artifactId>sql</artifactId>
+			<artifactId>be5-sql</artifactId>
 			<version>0.0.27</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
-			<artifactId>freemarker-patched</artifactId>
+			<artifactId>be5-freemarker-patched</artifactId>
 			<version>2.3.20p3</version>
 		</dependency>
 
