add CacheTable, clear cache and localization on dirty reload project

--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -4,6 +4,10 @@ _system_:
   order: '91'
   primaryKey: _dummy_
   queries:
+  - Cache:
+      type: Groovy
+      roles: Administrator
+      file: CacheTable.groovy
   - Entities:
       type: Groovy
       roles: Administrator
