--- a/server/src/test/resources/project.yaml
+++ b/server/src/test/resources/project.yaml
@@ -11,4 +11,8 @@ testProject:
   - atest
   - meters
   - propertyTypes
-  - tagFromColumn
+  - testTags
+  scripts:
+  - Post-db
+  - dictionaries
+
