--- a/server/src/test/resources/src/meta/entities/testTags.yaml
+++ b/server/src/test/resources/src/meta/entities/testTags.yaml
@@ -15,7 +15,7 @@ testTags:
         defaultValue: '''Regional'''
   queries:
   - '*** Selection view ***':
-      type: 1D
+      type: 1D_unknown
       invisible: true
       roles: '@AllRoles'
       code: |-
@@ -27,7 +27,7 @@ testTags:
       cacheable: true
       roles: '@AllRoles'
       code: |-
-        SELECT code AS "CODE", admlevel AS "NAME"
+        SELECT code AS "ID", admlevel AS "NAME"
         FROM testTags
         WHERE 1=1
         <if parameter="payable">
