--- a/modules/core/src/meta/entities/classifications.yaml
+++ b/modules/core/src/meta/entities/classifications.yaml
@@ -25,7 +25,7 @@ classifications:
         type: VARCHAR(100)
         canBeNull: true
     - creationDate___:
-        type: DATETIME
+        type: TIMESTAMP
         canBeNull: true
     indices:
     - IDX_CLASSIF1:
