--- a/server/pom.xml
+++ b/server/pom.xml
@@ -140,9 +140,10 @@
 			<plugin>
 				<groupId>org.codehaus.gmaven</groupId>
 				<artifactId>gmaven-plugin</artifactId>
-				<version>1.4</version>
+				<version>1.5</version>
 				<configuration>
-					<providerSelection>1.8</providerSelection>
+					<providerSelection>2.0</providerSelection>
+					<source />
 				</configuration>
 				<executions>
 					<execution>
