add FilterOperation - in process, fixes

--- a/modules/core/src/meta/entities/categories.yaml
+++ b/modules/core/src/meta/entities/categories.yaml
@@ -10,7 +10,7 @@ categories:
         primaryKey: true
     - entity:
         type: VARCHAR(30)
-        reference: entities
+        #todo reference: entities
     - publicID:
         type: VARCHAR(100)
         canBeNull: true
