--- a/server/src/test/resources/context.yaml
+++ b/server/src/test/resources/context.yaml
@@ -1,3 +1,11 @@
+context:
+  services:
+  - aService:
+      interface:      com.developmentontheedge.be5.env.impl.testServices.AService
+      implementation: com.developmentontheedge.be5.env.impl.testServices.AService
+  - bService:
+      interface:      com.developmentontheedge.be5.env.impl.testServices.BService
+      implementation: com.developmentontheedge.be5.env.impl.testServices.BService
 config:
   com.developmentontheedge.be5.api.services.impl.LogConfigurator:
     path: '/logging.properties'
