--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -66,20 +66,18 @@
 				<!--</executions>-->
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.gmaven</groupId>
-				<artifactId>gmaven-plugin</artifactId>
+				<groupId>org.codehaus.gmavenplus</groupId>
+				<artifactId>gmavenplus-plugin</artifactId>
 				<version>1.5</version>
-				<configuration>
-					<providerSelection>2.0</providerSelection>
-					<source />
-				</configuration>
 				<executions>
 					<execution>
 						<goals>
 							<goal>generateStubs</goal>
 							<goal>compile</goal>
-							<goal>generateTestStubs</goal>
+							<goal>testGenerateStubs</goal>
 							<goal>testCompile</goal>
+							<goal>removeStubs</goal>
+							<goal>removeTestStubs</goal>
 						</goals>
 					</execution>
 				</executions>
