rename SqlHelper -> DpsHelper

--- a/server/context.yaml
+++ b/server/context.yaml
@@ -11,7 +11,7 @@ context:
   services:
   - com.developmentontheedge.be5.api.services.impl.LogConfigurator
   - com.developmentontheedge.be5.databasemodel.impl.DatabaseModel
-  - com.developmentontheedge.be5.api.helpers.SqlHelper
+  - com.developmentontheedge.be5.api.helpers.DpsHelper
   - com.developmentontheedge.be5.api.validation.Validator
   - com.developmentontheedge.be5.api.helpers.OperationHelper
   - com.developmentontheedge.be5.api.services.Be5Caches
