fix type for additional properties

--- a/server/src/test/resources/src/meta/entities/testTags.yaml
+++ b/server/src/test/resources/src/meta/entities/testTags.yaml
@@ -17,6 +17,9 @@ testTags:
         type: VARCHAR(2)
         canBeNull: true
         reference: testTags
+    - testLong:
+        type: BIGINT
+        canBeNull: true
   queries:
   - '*** Selection view ***':
       type: 1D
