--- a/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
+++ b/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
@@ -21,6 +21,7 @@ testtableAdmin:
       operations:
       - TestOperation
       - TestGroovyOp
+      - CustomOperation
       - Delete
       - Edit
       - Insert
@@ -63,3 +64,7 @@ testtableAdmin:
   - Insert:
       roles: Administrator
       code: com.developmentontheedge.be5.operations.SilentInsertOperation
+  - CustomOperation:
+      type: Groovy
+      roles: Administrator
+      file: testtableAdmin/CustomOperation.groovy
