--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: java
 before_install:
   - git clone https://github.com/DevelopmentOnTheEdge/xmltest.git
     && cd xmltest
-    && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+    && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     && cd ../
   - git clone https://github.com/DevelopmentOnTheEdge/beanexplorer.git
     && cd beanexplorer
-    && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+    && mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     && cd ../
 install:
-  - mvn compile -Dmaven.javadoc.skip=true -B -V
+  - mvn test -B -Dmaven.javadoc.skip=true
 after_success:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test org.jacoco:jacoco-maven-plugin:report org.eluder.coveralls:coveralls-maven-plugin:report
 jdk:
