refactoring SpecialColumns - in process, OperationService - remove dpsHelper.*Special* operations

--- a/server/src/test/resources/src/meta/entities/meters.yaml
+++ b/server/src/test/resources/src/meta/entities/meters.yaml
@@ -24,6 +24,7 @@ meters:
     - isDeleted___:
         type: ENUM('no','yes')
         defaultValue: '''no'''
+    #todo add ip special columns
   queries:
   - '*** Selection view ***':
       type: 1D
