--- a/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
+++ b/server/src/test/resources/src/meta/entities/testtableAdmin.yaml
@@ -21,6 +21,7 @@ testtableAdmin:
       operations:
       - TestOperation
       - TestGroovyOp
+      - ErrorProcessing
       - CustomOperation
       - Delete
       - Edit
@@ -53,6 +54,10 @@ testtableAdmin:
       type: Groovy
       roles: Administrator
       file: TestGroovyOp.groovy
+  - ErrorProcessing:
+      type: Groovy
+      roles: Administrator
+      file: operationService/ErrorProcessing.groovy
   - Delete:
       records: 2
       roles: Administrator
