improve table tests

--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -24,7 +24,7 @@ testtable:
             FROM
               testtable t
   - LinkQuick:
-      type: 1D_unknown
+      type: 1D
       roles: SystemDeveloper
       code: |-
          SELECT
