--- a/server/pom.xml
+++ b/server/pom.xml
@@ -137,19 +137,15 @@
 				</dependencies>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.gmaven</groupId>
-				<artifactId>gmaven-plugin</artifactId>
+				<groupId>org.codehaus.gmavenplus</groupId>
+				<artifactId>gmavenplus-plugin</artifactId>
 				<version>1.5</version>
-				<configuration>
-					<providerSelection>2.0</providerSelection>
-					<source />
-				</configuration>
 				<executions>
 					<execution>
 						<goals>
-							<goal>generateStubs</goal>
+							<goal>addSources</goal>
+							<goal>addTestSources</goal>
 							<goal>compile</goal>
-							<goal>generateTestStubs</goal>
 							<goal>testCompile</goal>
 						</goals>
 					</execution>
