fix groovy goals

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -144,8 +144,12 @@
 					<execution>
 						<goals>
 							<goal>addSources</goal>
+							<goal>addTestSources</goal>
+							<goal>generateStubs</goal>
 							<goal>compile</goal>
 							<goal>testCompile</goal>
+							<goal>removeStubs</goal>
+							<goal>removeTestStubs</goal>
 						</goals>
 					</execution>
 				</executions>
