--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <module>metadata</module>
   <module>server</module>
   <module>maven</module>
+  <module>entitygen</module>
   <module>modules/core</module>
  </modules>
 
