--- a/entitygen/pom.xml
+++ b/entitygen/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.developmentontheedge.be5</groupId>
 	<artifactId>be5-entity-gen</artifactId>
 	<version>0.1.0</version>
-	<packaging>be5-entity-gen</packaging>
+	<packaging>jar</packaging>
 
 	<name>be5 entity generation</name>
 	<description>Maven plug-ins for be5</description>
@@ -18,6 +18,12 @@
 
 	<dependencies>
 
+        <dependency>
+            <groupId>com.developmentontheedge.be5.modules</groupId>
+            <artifactId>be5-modules-core</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>be5-server</artifactId>
@@ -26,10 +32,44 @@
 
 	</dependencies>
 
-	<build>
+    <build>
         <plugins>
-
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <phase>generate-test-sources</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.developmentontheedge.be5.entitygen.Main</mainClass>
+                    <arguments>
+                        <argument>${project.build.directory}/generated-sources/java/</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/java/</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
-	</build>
-
+    </build>
 </project>
