--- a/entitygen/src/main/resources/context.yaml
+++ b/entitygen/src/main/resources/context.yaml
@@ -2,6 +2,8 @@ context:
   components:
   - login: com.developmentontheedge.be5.modules.core.components.Login
   - logout: com.developmentontheedge.be5.modules.core.components.Logout
+  services:
+  - com.developmentontheedge.be5.modules.core.generate.TestBe5appEntityModels
 config:
   com.developmentontheedge.be5.api.services.impl.LogConfigurator:
     path: '/logging.properties'
